Fix td overflow x

--- a/website/index.css
+++ b/website/index.css
@@ -16,6 +16,10 @@ body {
   justify-content: center;
 }
 
+#urop-table td {
+  overflow-x: scroll;
+}
+
 #urop-table tfoot {
   display: table-header-group;
 }
